post-requester  toegevoegd

--- a/src/preferee/data/access/server/serverFiles.properties
+++ b/src/preferee/data/access/server/serverFiles.properties
@@ -1,4 +1,5 @@
 # Bevat de  relatieve padnamen naar de serverfiles
+# formaat : /<subdir>/<subdir> ... /<subdir>
 
 moviesPath = /movies
 ordersPath = /orders
