--- a/src/preferee/data/access/testServer/testFiles.properties
+++ b/src/preferee/data/access/testServer/testFiles.properties
@@ -1,7 +1,10 @@
 # Bevat de padnamen naar de testfiles
+# formaat windows: c:/<subdir> ... /<subdir>/<filename>.xml
+# formaat mac/linux: /<subdir>/ ... /<subdir>/<filename>.xml
 
-moviesPath = src/preferee/offlineResources/movies.xml
-ordersPath = src/preferee/offlineResources/orders.xml
-reservationsPath = src/preferee/offlineResources/reservations.xml
-screensPath = src/preferee/offlineResources/screens.xml
-showingsPath = src/preferee/offlineResources/showings.xml
+moviesPath = C:/Users/domien/Dropbox/Ugent/Programmeren II/place-preferee-master/place-preferee/src/preferee/resources/movies.xml
+ordersPath = C:/Users/domien/Dropbox/Ugent/Programmeren II/place-preferee-master/place-preferee/src/preferee/resources/orders.xml
+reservationsPath = C:/Users/domien/Dropbox/Ugent/Programmeren II/place-preferee-master/place-preferee/src/preferee/resources/reservations.xml
+screensPath = C:/Users/domien/Dropbox/Ugent/Programmeren II/place-preferee-master/place-preferee/src/preferee/resources/screens.xml
+showingsPath = C:/Users/domien/Dropbox/Ugent/Programmeren II/place-preferee-master/place-preferee/src/preferee/resources/showings.xml
+
