--- a/src/preferee/data/access/testServer/testFiles.properties
+++ b/src/preferee/data/access/testServer/testFiles.properties
@@ -2,9 +2,9 @@
 # formaat windows: c:/<subdir> ... /<subdir>/<filename>.xml
 # formaat mac/linux: /<subdir>/ ... /<subdir>/<filename>.xml
 
-moviesPath = C:/Users/domien/Dropbox/Ugent/Programmeren II/place-preferee-master/place-preferee/src/preferee/resources/movies.xml
-ordersPath = C:/Users/domien/Dropbox/Ugent/Programmeren II/place-preferee-master/place-preferee/src/preferee/resources/orders.xml
-reservationsPath = C:/Users/domien/Dropbox/Ugent/Programmeren II/place-preferee-master/place-preferee/src/preferee/resources/reservations.xml
-screensPath = C:/Users/domien/Dropbox/Ugent/Programmeren II/place-preferee-master/place-preferee/src/preferee/resources/screens.xml
-showingsPath = C:/Users/domien/Dropbox/Ugent/Programmeren II/place-preferee-master/place-preferee/src/preferee/resources/showings.xml
+moviesPath = preferee/resources/movies.xml
+ordersPath = preferee/resources/orders.xml
+reservationsPath = preferee/resources/reservations.xml
+screensPath = preferee/resources/screens.xml
+showingsPath = preferee/resources/showings.xml
 
