Nil-class controle toegevoegd.

--- a/src/preferee/data/access/server/serverFiles.properties
+++ b/src/preferee/data/access/server/serverFiles.properties
@@ -1,4 +1,4 @@
-# Bevat de  relatieve padnamen naar de serverfiles
+# Bevat de  relatieve padnamen naar de serverfiles vanuit de basis-url
 # formaat : /<subdir>/<subdir> ... /<subdir>
 
 moviesPath = /movies
