lege lijst bij filteren exceptions aangepast getid naar abstractdao gezet voor code duplicatie. voornaam en naam overal toegevoegd bovenaan.

--- a/src/preferee/data/access/server/serverFiles.properties
+++ b/src/preferee/data/access/server/serverFiles.properties
@@ -1,3 +1,4 @@
+# Created by domien Van Steendam.
 # Bevat de  relatieve padnamen naar de serverfiles vanuit de basis-url
 # formaat : /<subdir>/<subdir> ... /<subdir>
 
