--- a/src/preferee/data/access/testServer/resourcesCache/testFiles.properties
+++ b/src/preferee/data/access/testServer/resourcesCache/testFiles.properties
@@ -1,3 +1,4 @@
+# Created by domien Van Steendam.
 # Bevat de  relatieve padnamen naar de testfiles vanuit src-folder
 # formaat : /<subdir> ... /<subdir>/<filename>.xml
 
