GUI toegevoegd. Werkend m.b.v. ScreenManager en ScreenProperties. Bij inlezen worden alle scens statisch in het begin aangemaakt wat voor problemen zorgt.

--- a/src/preferee/data/access/testServer/resourcesCache/testFiles.properties
+++ b/src/preferee/data/access/testServer/resourcesCache/testFiles.properties
@@ -1,4 +1,4 @@
-# Created by domien Van Steendam.
+# Created by Domien Van Steendam.
 # Bevat de  relatieve padnamen naar de testfiles vanuit src-folder
 # formaat : /<subdir> ... /<subdir>/<filename>.xml
 
