--- a/src/preferee/data/access/server/serverFiles.properties
+++ b/src/preferee/data/access/server/serverFiles.properties
@@ -1,4 +1,4 @@
-# Created by domien Van Steendam.
+# Created by Domien Van Steendam.
 # Bevat de  relatieve padnamen naar de serverfiles vanuit de basis-url
 # formaat : /<subdir>/<subdir> ... /<subdir>
 
