GUI tem zitjes kiezen.

--- a/src/preferee/data/access/server/serverFiles.properties
+++ b/src/preferee/data/access/server/serverFiles.properties
@@ -1,4 +1,9 @@
 # Created by Domien Van Steendam.
+# /**
+# *
+# * UPDATE : AANGEZIEN  er indianio problemen heeft met .properties files, moet je deze eigenschappen aanpassen in de klasse ProductieProvider
+# *
+# */
 # Bevat de  relatieve padnamen naar de serverfiles vanuit de basis-url
 # formaat : /<subdir>/<subdir> ... /<subdir>
 
